<resources>
    <string name="app_name">Lego Sets Tracker</string>
    <string name="commonText_save">Save</string>
    <string name="commonText_cancel">Cancel</string>

    <!--  Main Menu Items  -->
    <string name="menu_item_sets">Sets</string>
    <string name="menu_item_themes">Themes</string>
    <string name="menu_item_reports">Reports</string>
    <!--  Additional Menu Items  -->
    <string name="menu_item_add_set">Add a Set</string>
    <string name="menu_item_add_theme">Add a Theme</string>

    <!--  set_create_update_layout.xml resources  -->
    <string name="update_lbl_set_info">Set Info:</string>
    <string name="update_hint_setNumber">Set ID:</string>
    <string name="update_hint_setName">Set Name:</string>

    <string name="update_lbl_theme_info">Theme:</string>

    <string name="update_textView_lbl_theme">Theme:</string>
    <string name="update_button_theme_lbl_initialText">Choose a Theme</string>
    <string name="update_dialogTheme_title">Themes:</string>
    <string name="update_dialogTheme_neutralText">Add Theme</string>
    <string name="update_dialogAddTheme_editTextHint">Theme Name:</string>
    <string name="update_dialogAddTheme_positiveText">@string/commonText_save</string>
    <string name="update_dialogAddTheme_negativeText">@string/commonText_cancel</string>

    <string name="update_hint_setNumberOfPieces">Number of Pieces:</string>
    <string name="update_lbl_other_info">Other Info:</string>
    <string name="update_textView_lbl_date_acquired">Date of First Acquisition:</string>
    <string name="update_button_date_lbl_initialText">Choose a date</string>
    <string name="update_hint_quantityOwned">Quantity Owned:</string>
    <string name="update_button_save">@string/commonText_save</string>
    <string name="update_button_cancel">@string/commonText_cancel</string>


    <!--  Enum Helpers  -->
    <string name="type_set">TYPE_SET</string>
    <string name="type_theme">TYPE_THEME</string>

    <string name="sort_auto_id">sort_auto_id</string>
    <string name="sort_id">SORT_ID</string>
    <string name="sort_name">SORT_NAME</string>
    <string name="sort_theme_id">SORT_THEME_ID</string>
    <string name="sort_pieces">SORT_PIECES</string>
    <string name="sort_acquired_date">SORT_ACQUIRED_DATE</string>
    <string name="sort_quantity">SORT_QUANTITY</string>
</resources>
