<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gridLayout_setCreateUpdate"
    android:columnCount="8"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:isScrollContainer="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/update_lbl_theme_info"
        android:id="@+id/textView_update_lbl_setInfo"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="7"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapper_update_themeName"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="7"
        android:nextFocusForward="@+id/button_update_save"
        app:errorEnabled="true"
        app:counterEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_update_themeName"
            android:hint="@string/update_dialogAddTheme_editTextHint"
            android:imeOptions="actionDone"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="7"
        android:layout_row="2"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button_cancel"
            android:id="@+id/button_update_cancel"
            android:hapticFeedbackEnabled="true"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:focusable="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button_save"
            android:id="@+id/button_update_save"
            android:hapticFeedbackEnabled="true"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:focusable="true"/>
    </LinearLayout>


</GridLayout>