<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gridLayout_setCreateUpdate"
            android:columnCount="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/update_lbl_set_info"
        android:id="@+id/textView_update_lbl_setInfo"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapper_update_setNumber"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="6"
        android:nextFocusForward="@+id/wrapper_update_setName">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_update_setId"
            android:hint="@string/update_hint_setNumber"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wrapper_update_setName"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="6"
        android:nextFocusForward="@+id/spinner_update_theme">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_update_setName"
            android:hint="@string/update_hint_setName"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_update_theme"
        android:layout_row="3"
        android:layout_column="0"
        android:spinnerMode="dialog"
        android:layout_gravity="fill_horizontal"
        android:prompt="@string/update_spinnerPromt_theme"
        android:layout_columnSpan="6"
        android:entries="@array/SpinnerTestData"
        android:nextFocusForward="@+id/button_update_dateField"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/update_lbl_other_info"
        android:id="@+id/textView_update_lbl_otherInfo"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_update_lbl_date_acquired"
        android:text="@string/update_lbl_date_acquired"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="start"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_update_dateField"
        android:text="@string/update_button_lbl_initialText"
        tools:text="10/21/2015"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_columnSpan="3"
        android:hapticFeedbackEnabled="true"
        android:layout_gravity="start"
        android:nextFocusForward="@+id/wrapper_update_setNumberOfPieces"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_update_setNumberOfPieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:layout_columnSpan="6"
        android:nextFocusForward="@+id/button_update_save">

        <EditText
            android:id="@+id/editText_update_setNumberOfPieces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_hint_setNumberOfPieces"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="19">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button_cancel"
            android:id="@+id/button_update_cancel"
            android:layout_row="19"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:hapticFeedbackEnabled="true"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button_save"
            android:id="@+id/button_update_save"
            android:layout_row="19"
            android:layout_column="3"
            android:layout_columnSpan="3"
            android:hapticFeedbackEnabled="true"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"/>
    </LinearLayout>


</GridLayout>